testsuite/poke.pkl/div-offsets-diag-3.pk
/* { dg-do compile } */

var a = 23#B
        / "foo"; /* { dg-error "invalid operand.*\n.*expected integral or offset" } */
